--- a/Logica/Logica.tex
+++ b/Logica/Logica.tex
@@ -243,7 +243,7 @@
         % ======   CLASIFICACION    ===========
         % =====================================
         \clearpage
-        \subsection{Teoremas, Colorario y Tautológias}
+        \subsection{Teoremas, Corolario y Tautológias}
             
             \subsubsection*{Clasificación de Propiedades}
 
