--- a/Logica/Logica.tex
+++ b/Logica/Logica.tex
@@ -123,7 +123,7 @@
 	\rule{\linewidth}{0.5mm} \\[2.0cm]
 	
 	% ====== SEMI TITLE ==========
-	{\LARGE Una Pequeña Introducción}\\[7cm] 
+	{\LARGE Una Pequeña Introducción al corazón de las matemáticas}\\[7cm] 
 	
 	% ============  MY INFORMATION  =================
 	\begin{center} \large
